# Text2Speech-Audio-Review-Dang-Phan-Bao-Huy

./: .env.example  .gitignore  Benchmark_final_result.md  README.md  pyproject.toml  qwen3-asr-0.6b.txt  qwen3-asr-1.7b.txt  requirements.txt
configs/: asr_models.json  benchmark_combined_missing_matched_vi.json  benchmark_free_vi.json  benchmark_gemini_2_5_pro_studio.json  benchmark_gemini_3_flash_preview_studio.json  benchmark_gemini_remaining_matched.json  benchmark_gemini_remaining_studio.json  benchmark_groq_matched_vi.json  benchmark_groq_studio_v3_only_vi.json  benchmark_groq_studio_vi.json  benchmark_openai_parallel_matched_vi.json  benchmark_openai_parallel_vi.json  benchmark_studio_free_vi.json
data/: manual_eval_manifest.csv  studio_manual_eval_manifest.csv
docs/: manual_evaluation_protocol.md  pipeline_design.md  providers_to_test.md  tts_data_quality.md
outputs/: azure_studio_retry_progress.md  benchmark_vi_models.md  evaluation_result.md  evaluation_summary.md  gemini_3_flash_preview_progress.md  gemini_3_flash_preview_studio.md  groq_studio_v3_only.md  initial_audio_samples_evaluation.md  studio_1200_iflytek_evaluation_result.md  studio_300_benchmark_summary.md  studio_elevenlabs_checkpoint_state.md  studio_evaluation_result.md  studio_full_azure_elevenlabs_evaluation_result.md  studio_full_benchmark_checkpoint_state.md  studio_gemini_2_5_flash_checkpoint_state.md  tmp3d1m11mz.tmp  tmp8g2w_0tt.tmp  tmp9kwz7zla.tmp  tmph3_22xr9.tmp  tmpqyj6wr7q.tmp  tmpuqtsaboc.tmp  tmpwkoz_7s4.tmp
scripts/: create_manifest.py  generate_evaluation_summary.py  (+16 more)
(+2546 files in other folders)
